Add Contact, Footer, Projects, and Skills components with corresponding styles
- Implemented Contact component for freelance opportunities with email and social links.
- Created Footer component displaying copyright information.
- Developed Projects component showcasing a list of personal projects.
- Added Skills component to display a grid of technical skills.
- Included SCSS styles for each component to enhance visual presentation.

--- a/index.html
+++ b/index.html
@@ -1,10 +1,27 @@
-<!-- public/index.html -->
 <!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>My Portfolio</title>
+
+    <title>Birrul Wldain – Portfolio</title>
+    <meta name="description" content="Frontend Developer | UI/UX | Open to Work" />
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://birrulwldain.engineer/" />
+    <meta property="og:title" content="Birrul Wldain – Portfolio" />
+    <meta property="og:description" content="Frontend Developer | UI/UX | Open to Work" />
+    <meta property="og:image" content="https://birrulwldain.engineer/profile.jpg" />
+
+    <!-- Twitter -->
+    <meta name="twitter:card" content="summary" />
+    <meta name="twitter:title" content="Birrul Wldain – Portfolio" />
+    <meta name="twitter:description" content="Frontend Developer | UI/UX | Open to Work" />
+    <meta name="twitter:image" content="https://birrulwldain.engineer/profile.jpg" />
+
+    <!-- Favicon -->
+    <link rel="icon" type="image/png" href="/profile.jpg" />
   </head>
   <body>
     <div id="root"></div>
