--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <meta name="twitter:image" content="https://birrulwldain.engineer/profile.jpg" />
 
     <!-- Favicon -->
-    <link rel="icon" type="image/png" href="/profile.jpg" />
+    <link rel="icon" href="/favicon.ico" />
   </head>
   <body>
     <div id="root"></div>
