--- a/index.html
+++ b/index.html
@@ -1,6 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <!-- Classic favicon -->
+    <link rel="icon" href="/favicon.ico" />
+    <link rel="icon" type="image/x-icon" href="/favicon.ico" />
+    <meta name="apple-mobile-web-app-title" content="Birrul Wldain" />
+    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+
+    <!-- PNG versions for different devices -->
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png" />
+    <link rel="icon" type="image/png" sizes="96x96" href="/favicon-96x96.png" />
+    <link rel="icon" type="image/png" sizes="192x192" href="/favicon-192x192.png" />
+
+    <!-- Apple Touch Icon -->
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
+
+    <!-- Web Manifest (optional) -->
+    <link rel="manifest" href="/site.webmanifest" />
+
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
@@ -20,8 +37,7 @@
     <meta name="twitter:description" content="Frontend Developer | UI/UX | Open to Work" />
     <meta name="twitter:image" content="https://birrulwldain.engineer/profile.jpg" />
 
-    <!-- Favicon -->
-    <link rel="icon" href="/favicon.ico" />
+
   </head>
   <body>
     <div id="root"></div>
