--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
   <head>
     <!-- Classic favicon -->
@@ -10,7 +10,12 @@
     <!-- PNG versions for different devices -->
     <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png" />
     <link rel="icon" type="image/png" sizes="96x96" href="/favicon-96x96.png" />
-    <link rel="icon" type="image/png" sizes="192x192" href="/favicon-192x192.png" />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="192x192"
+      href="/favicon-192x192.png"
+    />
 
     <!-- Apple Touch Icon -->
     <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
@@ -22,22 +27,35 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
     <title>Birrul Wldain – Portfolio</title>
-    <meta name="description" content="Frontend Developer | UI/UX | Open to Work" />
+    <meta
+      name="description"
+      content="Frontend Developer | UI/UX | Open to Work"
+    />
 
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://birrulwldain.engineer/" />
     <meta property="og:title" content="Birrul Wldain – Portfolio" />
-    <meta property="og:description" content="Frontend Developer | UI/UX | Open to Work" />
-    <meta property="og:image" content="https://birrulwldain.engineer/profile.jpg" />
+    <meta
+      property="og:description"
+      content="Frontend Developer | UI/UX | Open to Work"
+    />
+    <meta
+      property="og:image"
+      content="https://birrulwldain.engineer/profile.jpg"
+    />
 
     <!-- Twitter -->
     <meta name="twitter:card" content="summary" />
     <meta name="twitter:title" content="Birrul Wldain – Portfolio" />
-    <meta name="twitter:description" content="Frontend Developer | UI/UX | Open to Work" />
-    <meta name="twitter:image" content="https://birrulwldain.engineer/profile.jpg" />
-
-
+    <meta
+      name="twitter:description"
+      content="Frontend Developer | UI/UX | Open to Work"
+    />
+    <meta
+      name="twitter:image"
+      content="https://birrulwldain.engineer/profile.jpg"
+    />
   </head>
   <body>
     <div id="root"></div>
