feat: add interactive thesis exhibition
Adds an interactive 'pameran' for the thesis project.

- Creates training_progress.json for model metrics.

- Develops the main exhibition page with multiple sections.

- Adds a start.sh script for automation.

--- a/index.html
+++ b/index.html
@@ -475,7 +475,7 @@
                 <li><a href="#about">About</a></li>
                 <li><a href="#projects">Projects</a></li>
                 <li><a href="/skripsi/index.html">Skripsi</a></li>
-                <li><a href="/predictor">Spectroscopy Dashboard</a></li>
+                <li><a href="/predictor/index.html">Spectroscopy Dashboard</a></li>
             </ul>
         </nav>
     </header>
@@ -488,7 +488,7 @@
                 <a href="#about" class="button button-primary">About Me</a>
                 <a href="#projects" class="button button-outline">View Projects</a>
                 <a href="/skripsi/index.html" class="button button-outline">Skripsi</a>
-                <a href="/predictor" class="button button-secondary">Spectroscopy Dashboard</a>
+                <a href="/predictor/index.html" class="button button-secondary">Spectroscopy Dashboard</a>
             </div>
         </div>
     </section>
