--- a/public/skripsi/index.html
+++ b/public/skripsi/index.html
@@ -187,7 +187,7 @@
             <p><strong>Unduhan:</strong></p>
             <ul class="muted" style="padding-left:18px">
               <li><a href="/skripsi/assets/al-ca-50.asc" download>Contoh data spektrum (.asc)</a></li>
-              <li><a href="/predictor" target="_self">Coba Dashboard LIBS (React)</a></li>
+              <li><a href="/predictor/index.html" target="_self">Coba Dashboard LIBS (React)</a></li>
               <li><a href="https://github.com/birrulwldain" target="_blank" rel="noopener">Repositori Kode</a></li>
             </ul>
           </div>
