chore: remove unused files and clean up project structure

--- a/public/index-static.html
+++ b/public/index-static.html
@@ -6,7 +6,7 @@
     <title>Birrul Walidain - Portfolio</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=JetBrains+Mono:wght@300;400;500;600;700&display=swap" rel="stylesheet">
     <style>
         :root {
             --primary: #6d28d9;
@@ -28,10 +28,10 @@
         }
         
         body {
-            font-family: 'Inter', -apple-system, BlinkMacSystemFont, sans-serif;
+            font-family: 'JetBrains Mono', 'Monaco', 'Consolas', 'Courier New', monospace;
             line-height: 1.7;
-            color: var(--text-dark);
-            background-color: var(--bg-light);
+            color: #333333;
+            background-color: #FAFAFA;
             overflow-x: hidden;
         }
         
