--- a/public/static-test.html
+++ b/public/static-test.html
@@ -6,10 +6,10 @@
     <title>Static Test</title>
     <style>
         body {
-            font-family: Arial, sans-serif;
+            font-family: 'JetBrains Mono', 'Monaco', 'Consolas', 'Courier New', monospace;
             margin: 0;
             padding: 20px;
-            background-color: #f0f2f5;
+            background-color: #FAFAFA;
         }
         .container {
             max-width: 800px;
