--- a/public/skripsi/index.html
+++ b/public/skripsi/index.html
@@ -10,11 +10,11 @@
   <link rel="manifest" href="/site.webmanifest" />
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;700&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=JetBrains+Mono:wght@300;400;600;700&display=swap" rel="stylesheet">
   <style>
     :root { --primary:#6d28d9; --secondary:#0ea5e9; --text:#111827; --muted:#6b7280; --bg:#f8fafc; --card:#ffffff; }
     *{box-sizing:border-box;margin:0;padding:0}
-    body{font-family:Inter,system-ui,-apple-system,Segoe UI,Roboto,Ubuntu,"Helvetica Neue";color:var(--text);background:var(--bg);line-height:1.7}
+  body{font-family:'JetBrains Mono',Monaco,Consolas,'Courier New',monospace;color:#333;background:#FAFAFA;line-height:1.7}
     header{position:sticky;top:0;z-index:20;backdrop-filter:blur(10px);background:rgba(255,255,255,.85);border-bottom:1px solid rgba(0,0,0,.06)}
     .nav{max-width:1100px;margin:0 auto;display:flex;align-items:center;justify-content:space-between;padding:14px 20px}
   .logo{font-weight:700;background:linear-gradient(90deg,var(--primary),var(--secondary));-webkit-background-clip:text;background-clip:text;color:transparent}
